// Database Markup Language (DBML) file for SmartCAPI PWA

Table users {
  id integer [pk, increment]
  username varchar(50) [unique, not null]
  email varchar(100) [unique, not null]
  hashed_password varchar(100) [not null]
  full_name varchar(100)
  phone varchar(20)
  role UserRole [default: "enumerator"]
  is_active boolean [default: true]
  voice_sample_path varchar(255)
  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Table respondents {
  id integer [pk, increment]
  full_name varchar(100) [not null]
  birth_year integer
  education varchar(100)
  address text
  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Table ml_models {
  id integer [pk, increment]
  name varchar(100) [not null]
  version varchar(50) [not null]
  model_type ModelType [not null]
  file_path varchar(255) [not null]
  metrics text
  parameters text
  is_active boolean [default: true]
  created_at timestamp [default: `now()`]
}

Table interviews {
  id integer [pk, increment]
  enumerator_id integer [not null]
  respondent_id integer
  mode InterviewMode [not null]
  duration integer
  raw_audio_path varchar(255)
  rf_model_id integer
  whisper_model_id integer
  llm_model_id integer
  status InterviewStatus [default: "active"]
  sync_status SyncStatus [default: "pending"]
  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Table audio_chunks {
  id integer [pk, increment]
  interview_id integer [not null]
  chunk_order integer [not null]
  start_time float
  end_time float
  file_path varchar(255) [not null]
  speaker_label SpeakerLabel
  speaker_confidence float
  transcript text
  transcript_confidence float
  created_at timestamp [default: `now()`]
}

Table interview_transcripts {
  id integer [pk, increment]
  interview_id integer [not null]
  raw_transcript text
  cleaned_transcript text
  summary text
  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Table questionnaire_questions {
  id integer [pk, increment]
  question_number integer
  variable_name varchar(100)
  data_type varchar(50)
  usage_reason text
  question_text text [not null]
  is_active boolean [default: true]
  created_at timestamp [default: `now()`]
}

Table extracted_answers {
  id integer [pk, increment]
  interview_id integer [not null]
  question_id integer [not null]
  answer_text text
  transcript text
  confidence_score float
  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Table voice_profiles {
  id integer [pk, increment]
  user_id integer [not null]
  mfcc_features_path varchar(255)
  is_active boolean [default: true]
  created_at timestamp [default: `now()`]
}

Table processing_logs {
  id integer [pk, increment]
  interview_id integer
  log_type LogType
  message text
  log_metadata text
  created_at timestamp [default: `now()`]
}

// Enums
enum UserRole {
  admin
  enumerator
}

enum InterviewMode {
  ai
  manual
}

enum SyncStatus {
  pending
  synced
  failed
}

enum InterviewStatus {
  active
  completed
  cancelled
}

enum ModelType {
  rf
  whisper
  llm
}

enum SpeakerLabel {
  respondent
  enumerator
  unknown
}

enum LogType {
  system
  audio_processing
  whisper
  rf
  llm
  sync
}

// Relationships
Ref: interviews.enumerator_id > users.id [delete: cascade]
Ref: interviews.respondent_id > respondents.id
Ref: interviews.rf_model_id > ml_models.id
Ref: interviews.whisper_model_id > ml_models.id
Ref: interviews.llm_model_id > ml_models.id

Ref: audio_chunks.interview_id > interviews.id

Ref: interview_transcripts.interview_id > interviews.id

Ref: extracted_answers.interview_id > interviews.id
Ref: extracted_answers.question_id > questionnaire_questions.id

Ref: voice_profiles.user_id > users.id [delete: cascade]

Ref: processing_logs.interview_id > interviews.id
